--- a/legacy_tables/tex_tables/planet_table.tex
+++ b/legacy_tables/tex_tables/planet_table.tex
@@ -19,7 +19,6 @@ HD 107148 c & HD 107148 c & $0.0626^{+0.0097}_{-0.0098}$ & $0.1406^{+0.0018}_{-0
 HD 108874 b & HD 108874 b & $1.32^{+0.047}_{-0.047}$ & $1.053^{+0.016}_{-0.016}$ & $0.144^{+0.016}_{-0.016}$ & \cite{Butler03} & \\
 HD 108874 c & HD 108874 c & $1.14^{+0.052}_{-0.050}$ & $2.83^{+0.044}_{-0.045}$ & $0.265^{+0.030}_{-0.031}$ & \cite{Vogt05} & \\
 HD 114729 b & HD 114729 b & $0.892^{+0.053}_{-0.053}$ & $2.094^{+0.022}_{-0.022}$ & $0.098^{+0.048}_{-0.050}$ & \cite{Butler03} & \\
-HD 114762 b & HD 114762 b & $11.06^{+0.16}_{-0.17}$ & $0.3521^{+0.0026}_{-0.0026}$ & $0.3439^{+0.0012}_{-0.0012}$ & \cite{Butler06} & \\
 HD 114783 b & HD 114783 b & $1.033^{+0.034}_{-0.033}$ & $1.164^{+0.016}_{-0.016}$ & $0.126^{+0.016}_{-0.016}$ & \cite{Vogt02} & \\
 HD 114783 c & HD 114783 c & $0.66^{+0.046}_{-0.047}$ & $4.97^{+0.12}_{-0.11}$ & $0.114^{+0.058}_{-0.058}$ & \cite{Bryan16} & \\
 HD 115617 b & 61 Vir b & $0.0507^{+0.0035}_{-0.0036}$ & $0.215^{+0.0028}_{-0.0029}$ & $0.068^{+0.067}_{-0.047}$ & \cite{Vogt10} & \\
@@ -39,7 +38,7 @@ HD 130322 b & HD 130322 b & $1.149^{+0.037}_{-0.036}$ & $0.0929^{+0.0011}_{-0.00
 HD 1326 b & HD 1326 b & $0.0171^{+0.0013}_{-0.0013}$ & $0.07321^{+0.00047}_{-0.00048}$ & $0.075^{+0.072}_{-0.052}$ & \cite{Howard14} & \\
 HD 134987 b & HD 134987 b & $1.623^{+0.049}_{-0.049}$ & $0.817^{+0.012}_{-0.012}$ & $0.2281^{+0.0078}_{-0.0077}$ & \cite{Butler01} & \\
 HD 134987 c & HD 134987 c & $0.934^{+0.063}_{-0.060}$ & $6.62^{+0.16}_{-0.15}$ & $0.154^{+0.049}_{-0.050}$ & \cite{Jones10} & \\
-HD 136925 b & HD 136925 b & $1.08^{+0.20}_{-0.19}$ & $4.68^{+0.390}_{-0.063}$ & $0.68^{+0.07}_{-0.31}$ & This work & \\
+HD 136925 b & HD 136925 b & $0.84^{+0.078}_{-0.074}$ & $5.13^{+0.12}_{-0.11}$ & $0.103^{+0.094}_{-0.070}$ & This work & \\
 HD 13931 b & HD 13931 b & $1.911^{+0.077}_{-0.076}$ & $5.323^{+0.091}_{-0.091}$ & $0.02^{+0.021}_{-0.014}$ & \cite{Howard10} & \\
 HD 141004 b & HIP 77257 b & $0.0428^{+0.0047}_{-0.0045}$ & $0.1238^{+0.002}_{-0.002}$ & $0.16^{+0.11}_{-0.10}$ & This work & \\
 HD 141399 b & HD 141399 b & $1.329^{+0.046}_{-0.047}$ & $0.693^{+0.012}_{-0.012}$ & $0.0465^{+0.0068}_{-0.0068}$ & \cite{Vogt14} & \\
@@ -63,9 +62,9 @@ HD 16141 b & HD 16141 b & $0.25^{+0.017}_{-0.017}$ & $0.3609^{+0.0072}_{-0.0075}
 HD 164922 b & HD 164922 b & $0.344^{+0.013}_{-0.013}$ & $2.149^{+0.025}_{-0.025}$ & $0.065^{+0.027}_{-0.029}$ & \cite{Butler06} & \\
 HD 164922 c & HD 164922 c & $0.0451^{+0.0036}_{-0.0036}$ & $0.3411^{+0.0039}_{-0.0040}$ & $0.096^{+0.088}_{-0.066}$ & \cite{Fulton16} & \\
 HD 164922 d & HD 164922 d & $0.0331^{+0.0031}_{-0.0031}$ & $0.2292^{+0.0026}_{-0.0027}$ & $0.086^{+0.083}_{-0.060}$ & This work & \\
-HD 164922 e & HD 164922 e & $0.0149^{+0.0021}_{-0.0021}$ & $0.1023^{+0.0012}_{-0.0012}$ & $0.18^{+0.17}_{-0.12}$ & This work & \\
+HD 164922 e & HD 164922 e & $0.0149^{+0.0021}_{-0.0021}$ & $0.1023^{+0.0012}_{-0.0012}$ & $0.18^{+0.17}_{-0.12}$ & \cite{Benatti20} & \\
 HD 167042 b & HD 167042 b & $1.59^{+0.13}_{-0.13}$ & $1.304^{+0.040}_{-0.043}$ & $0.092^{+0.061}_{-0.057}$ & \cite{Johnson08} & \\
-HD 168009 b & HIP 89474 b & $0.03^{+0.0038}_{-0.0037}$ & $0.1193^{+0.0017}_{-0.0018}$ & $0.121^{+0.110}_{-0.082}$ & This work & \\
+HD 168009 b & HIP 89474 b & $0.03^{+0.0038}_{-0.0037}$ & $0.1192^{+0.0017}_{-0.0018}$ & $0.121^{+0.110}_{-0.082}$ & This work & \\
 HD 168443 b & HD 168443 b & $7.92^{+0.16}_{-0.16}$ & $0.2977^{+0.0029}_{-0.0030}$ & $0.5313^{+0.00062}_{-0.00061}$ & \cite{Wittenmyer07} & \\
 HD 168443 c & HD 168443 c & $17.76^{+0.35}_{-0.35}$ & $2.881^{+0.028}_{-0.029}$ & $0.2112^{+0.0013}_{-0.0013}$ & \cite{Wittenmyer07} & \\
 HD 168746 b & HD 168746 b & $0.2294^{+0.0078}_{-0.0075}$ & $0.06504^{+0.00054}_{-0.00056}$ & $0.098^{+0.026}_{-0.026}$ & \cite{Pepe02} & \\
@@ -111,9 +110,9 @@ HD 31253 b & HD 31253 b & $0.446^{+0.063}_{-0.063}$ & $1.296^{+0.024}_{-0.025}$ 
 HD 32963 b & HD 32963 b & $0.726^{+0.036}_{-0.035}$ & $3.416^{+0.058}_{-0.059}$ & $0.069^{+0.040}_{-0.039}$ & \cite{Rowan16} & \\
 HD 33636 b & HIP 24205 b & $8.92^{+0.29}_{-0.30}$ & $3.238^{+0.051}_{-0.053}$ & $0.491^{+0.0050}_{-0.0049}$ & \cite{Vogt02} & \\
 HD 34445 b & HD 34445 b & $0.658^{+0.04}_{-0.04}$ & $2.106^{+0.038}_{-0.040}$ & $0.103^{+0.059}_{-0.056}$ & \cite{Howard10} & \\
-HD 34445 c & HD 34445 c & $0.166^{+0.022}_{-0.022}$ & $0.727^{+0.013}_{-0.013}$ & $0.17^{+0.11}_{-0.10}$ & \cite{Vogt17} & \\
-HD 34445 d & HD 34445 d & $0.114^{+0.015}_{-0.014}$ & $0.4867^{+0.0086}_{-0.0090}$ & $0.26^{+0.12}_{-0.11}$ & \cite{Vogt17} & \\
-HD 34445 e & HD 34445 e & $0.065^{+0.0110}_{-0.0095}$ & $0.2722^{+0.0048}_{-0.0050}$ & $0.35^{+0.19}_{-0.17}$ & \cite{Vogt17} & \\
+%HD 34445 c & HD 34445 c & $0.166^{+0.022}_{-0.022}$ & $0.727^{+0.013}_{-0.013}$ & $0.17^{+0.11}_{-0.10}$ & \cite{Vogt17} & \\
+%HD 34445 d & HD 34445 d & $0.114^{+0.015}_{-0.014}$ & $0.4867^{+0.0086}_{-0.0090}$ & $0.26^{+0.12}_{-0.11}$ & \cite{Vogt17} & \\
+%HD 34445 e & HD 34445 e & $0.065^{+0.0110}_{-0.0095}$ & $0.2722^{+0.0048}_{-0.0050}$ & $0.35^{+0.19}_{-0.17}$ & \cite{Vogt17} & \\
 HD 3651 b & HD 3651 b & $0.2202^{+0.0077}_{-0.0077}$ & $0.2954^{+0.0043}_{-0.0044}$ & $0.614^{+0.015}_{-0.015}$ & \cite{Butler06} & \\
 HD 3765 b & HIP 3206 b & $0.173^{+0.014}_{-0.013}$ & $2.108^{+0.032}_{-0.033}$ & $0.298^{+0.078}_{-0.071}$ & This work & \\
 HD 38529 b & HD 38529 b & $13.21^{+0.1}_{-0.1}$ & $3.736^{+0.01}_{-0.01}$ & $0.3545^{+0.0048}_{-0.0047}$ & \cite{Fischer01} & \\
@@ -154,7 +153,7 @@ HD 80606 b & HD 80606 b & $4.16^{+0.13}_{-0.13}$ & $0.4602^{+0.0069}_{-0.0070}$ 
 HD 82943 b & HD 82943 b & $1.652^{+0.085}_{-0.076}$ & $0.747^{+0.011}_{-0.011}$ & $0.421^{+0.014}_{-0.015}$ & \cite{Mayor04} & \\
 HD 82943 c & HD 82943 c & $1.539^{+0.052}_{-0.052}$ & $1.189^{+0.017}_{-0.017}$ & $0.142^{+0.042}_{-0.046}$ & \cite{Mayor04} & \\
 HD 8574 b & HD 8574 b & $1.765^{+0.075}_{-0.073}$ & $0.75^{+0.012}_{-0.012}$ & $0.306^{+0.022}_{-0.022}$ & \cite{Perrier03} & \\
-HD 86728 b & HIP 49081 b & $0.0289^{+0.0046}_{-0.0045}$ & $0.1982^{+0.0028}_{-0.0029}$ & $0.13^{+0.160}_{-0.093}$ & This work & \\
+%HD 86728 b & HIP 49081 b & $0.0289^{+0.0046}_{-0.0045}$ & $0.1982^{+0.0028}_{-0.0029}$ & $0.13^{+0.160}_{-0.093}$ & This work & \\
 HD 87883 b & HD 87883 b & $2.292^{+0.069}_{-0.069}$ & $4.073^{+0.056}_{-0.057}$ & $0.7121^{+0.0083}_{-0.0079}$ & \cite{Fischer09} & \\
 HD 90156 b & HD 90156 b & $0.037^{+0.0062}_{-0.0060}$ & $0.2508^{+0.0037}_{-0.0037}$ & $0.16^{+0.18}_{-0.11}$ & \cite{Mordasini11} & \\
 HD 92788 b & HD 92788 b & $3.52^{+0.1}_{-0.1}$ & $0.949^{+0.013}_{-0.013}$ & $0.3552^{+0.0070}_{-0.0072}$ & \cite{Fischer01} & \\
