Cleaning up, added table with significant figures

--- a/Notebook_Tables.ipynb
+++ b/Notebook_Tables.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,10 @@
     "        return np.nan\n",
     "    else:\n",
     "        return round(x, -int(floor(log10(abs(y)))) + 1)\n",
-    "round_to_ref_vec = np.vectorize(round_to_reference)"
+    "round_to_ref_vec = np.vectorize(round_to_reference)\n",
+    "\n",
+    "#round_sig(x, sig=2)\n",
+    "#round_to_reference(x, y)"
    ]
   },
   {
@@ -1799,60 +1802,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masses_only['insol_minus'] = masses_only['insols_minus']\n",
+    "masses_only['insol_plus']  = masses_only['insols_plus']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planet_round_columns = ['mass', 'axis', 'per', 'tc', \n",
+    "                        'w', 'k', 'e'] #'insol', , 'teq']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planets_rounded = pd.DataFrame()\n",
+    "planets_rounded['hostname'] = masses_only['hostname']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mass\n",
+      "axis\n",
+      "per\n",
+      "tc\n",
+      "w\n",
+      "k\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "#round_sig(x, sig=2)\n",
+    "#round_to_reference(x, y)\n",
+    "\n",
+    "for column in planet_round_columns:\n",
+    "    print(column)\n",
+    "    vector = np.array(masses_only[column+'_med'])\n",
+    "    vector_plus  = np.array(masses_only[column+'_plus'])\n",
+    "    vector_minus = np.array(masses_only[column+'_minus'])  \n",
+    "    err_plus = vector_plus - vector\n",
+    "    err_minus = vector - vector_minus\n",
+    "    \n",
+    "    err_plus_round  = round_sig_vec(err_plus)\n",
+    "    err_minus_round = round_sig_vec(err_minus)\n",
+    "    vector_round = round_to_ref_vec(vector, err_plus_round)\n",
+    "    planets_rounded[column] = vector_round\n",
+    "    planets_rounded[column+'_errplus'] = err_plus_round\n",
+    "    planets_rounded[column+'_errminus'] = err_minus_round\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hostname</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>mass_errplus</th>\n",
+       "      <th>mass_errminus</th>\n",
+       "      <th>axis</th>\n",
+       "      <th>axis_errplus</th>\n",
+       "      <th>axis_errminus</th>\n",
+       "      <th>per</th>\n",
+       "      <th>per_errplus</th>\n",
+       "      <th>per_errminus</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tc_errminus</th>\n",
+       "      <th>w</th>\n",
+       "      <th>w_errplus</th>\n",
+       "      <th>w_errminus</th>\n",
+       "      <th>k</th>\n",
+       "      <th>k_errplus</th>\n",
+       "      <th>k_errminus</th>\n",
+       "      <th>e</th>\n",
+       "      <th>e_errplus</th>\n",
+       "      <th>e_errminus</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>145675</td>\n",
+       "      <td>4.850</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>2.83</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>1766.41</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.4049</td>\n",
+       "      <td>0.0097</td>\n",
+       "      <td>0.012</td>\n",
+       "      <td>89.49</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.3674</td>\n",
+       "      <td>0.0035</td>\n",
+       "      <td>0.0038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>145675</td>\n",
+       "      <td>5.800</td>\n",
+       "      <td>1.400</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>16.40</td>\n",
+       "      <td>9.300</td>\n",
+       "      <td>4.300</td>\n",
+       "      <td>25000.00</td>\n",
+       "      <td>24000.00</td>\n",
+       "      <td>9200.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>-0.1300</td>\n",
+       "      <td>0.1400</td>\n",
+       "      <td>0.180</td>\n",
+       "      <td>46.70</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>0.4500</td>\n",
+       "      <td>0.1700</td>\n",
+       "      <td>0.1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>145675</td>\n",
+       "      <td>0.233</td>\n",
+       "      <td>0.045</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>4.37</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>0.210</td>\n",
+       "      <td>3400.00</td>\n",
+       "      <td>140.00</td>\n",
+       "      <td>240.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>-0.0000</td>\n",
+       "      <td>0.3700</td>\n",
+       "      <td>0.480</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.3700</td>\n",
+       "      <td>0.2100</td>\n",
+       "      <td>0.2400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 22 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['Unnamed: 0', 'hostname', 'status', 'pl_index', 'mass', 'mass_med',\n",
-       "       'mass_minus', 'mass_plus', 'axis', 'axis_med', 'axis_minus',\n",
-       "       'axis_plus', 'per', 'per_med', 'per_minus', 'per_plus', 'tc', 'tc_med',\n",
-       "       'tc_minus', 'tc_plus', 'w', 'w_med', 'w_minus', 'w_plus', 'k', 'k_med',\n",
-       "       'k_minus', 'k_plus', 'e', 'e_med', 'e_minus', 'e_plus', 'e_mode',\n",
-       "       'e_68', 'insol', 'insol_med', 'insols_minus', 'insols_plus', 'teq',\n",
-       "       'teq_med', 'teq_minus', 'teq_plus', 'post_path'],\n",
-       "      dtype='object')"
+       "   hostname   mass  mass_errplus  mass_errminus   axis  axis_errplus  \\\n",
+       "57   145675  4.850         0.150          0.150   2.83         0.041   \n",
+       "58   145675  5.800         1.400          1.000  16.40         9.300   \n",
+       "59   145675  0.233         0.045          0.038   4.37         0.150   \n",
+       "\n",
+       "    axis_errminus       per  per_errplus  per_errminus  ...  tc_errminus  \\\n",
+       "57          0.041   1766.41         0.67          0.68  ...          1.9   \n",
+       "58          4.300  25000.00     24000.00       9200.00  ...        310.0   \n",
+       "59          0.210   3400.00       140.00        240.00  ...        320.0   \n",
+       "\n",
+       "         w  w_errplus  w_errminus      k  k_errplus  k_errminus       e  \\\n",
+       "57  0.4049     0.0097       0.012  89.49       0.65        0.52  0.3674   \n",
+       "58 -0.1300     0.1400       0.180  46.70       6.00        4.80  0.4500   \n",
+       "59 -0.0000     0.3700       0.480   3.50       1.10        0.71  0.3700   \n",
+       "\n",
+       "    e_errplus  e_errminus  \n",
+       "57     0.0035      0.0038  \n",
+       "58     0.1700      0.1500  \n",
+       "59     0.2100      0.2400  \n",
+       "\n",
+       "[3 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "masses_only.columns"
+    "planets_rounded.query('hostname == \"145675\"')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "masses_only = masses_only[['hostname', 'status', 'pl_index', 'mass', 'mass_med',\n",
-    "       'mass_minus', 'mass_plus', 'axis', 'axis_med', 'axis_minus',\n",
-    "       'axis_plus', 'per', 'per_med', 'per_minus', 'per_plus', 'tc', 'tc_med',\n",
-    "       'tc_minus', 'tc_plus', 'w', 'w_med', 'w_minus', 'w_plus', 'k', 'k_med',\n",
-    "       'k_minus', 'k_plus', 'e', 'e_med', 'e_minus', 'e_plus', 'e_mode', 'e_68']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "planets_rounded = masses_only.round(8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "planets_rounded = planets_rounded.sort_values('hostname').reset_index(drop=True)"
+    "planets_rounded.to_csv('legacy_tables/planet_list_sigfig.csv')"
    ]
   },
   {
@@ -1870,7 +2054,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_select_rounded = data_select.round(6)"
+    "#data_select_rounded = data_select.round(6)"
    ]
   },
   {
